# group-project-liquidity-beggars

./: CMakeLists.txt  README.md  TODO.md
src/: exchange.cpp  exchange.hpp  main.cpp  order.cpp  order.hpp  order_book.cpp  order_book.hpp  simulation_analysis.py  trader.cpp  trader.hpp
tests/: CMakeLists.txt  exchange_tests.cpp  order_book_tests.cpp  order_tests.cpp  trader_tests.cpp
